feat: boards api get (#136)
* feat: GetMany handler method & shared code deduplication

* feat: GetMany service method

* feat: GetMany repostiory method

* feat: bind GetMeny method

* test: update board e2e test to include GET /boards & dedup common code

* refactor(service): inline test structs

* refactor(tests): straightforward code by removing shared cases

* fix: ensure board is only accessible to author

* refactor: remove almost duplicate declaration

* refactor: remove too specific helper

* refactor(integration): use plain SQL to decouple tests

* style: remove useless comment

* chore: fmt
